-------------------------- soilDB 1.6 (2015-08-19) ----------------------------
* soilDB now imports from the `reshape` package, will transition to `reshape2` with soilDB 2.0
* fetchHenry() officially added, complete with documentation

-------------------------- soilDB 1.5-8 (2015-08-13) ----------------------------
* fetchKSSL() gets an argument for downloading data by MLRA

-------------------------- soilDB 1.5-7 (2015-03-10) ----------------------------
* updated the `loafercreek` and `gopheridge` sample datasets

-------------------------- soilDB 1.5-3 (2015-03-10) ----------------------------
* nullFragsAreZero argument to fetchNASIS() reset to TRUE, new documentation pending
* consolidate of messages printed when running fetchNASIS()
* introduction of new option "soilDB.verbose" (default is FALSE) for increasing the level of QC information printed
* new tutorial on fetchNASIS()

-------------------------- soilDB 1.5-2 (2015-02-24) ----------------------------
* RODBC temporarily moved from "suggested" package to "imported" package... not a good idea, reverted to "suggested"

-------------------------- soilDB 1.4-5 (2015-01-20) ----------------------------
* mix_and_clean_colors() now returns back-transformed, mixed, munsell colors
* added psctopdepth and pscbotdepth back to extended NASIS query (particle size control section depths)

-------------------------- soilDB 1.4-3 (2015-01-12) ----------------------------
* get_hz_data_from_NASIS_db() no longer assumes fragment volume of NULL = 0
* get_extended_data_from_NASIS_db() no longer assumes fragment volume of NULL = 0
* fetchNASIS() has a new argument, nullFragsAreZero=FALSE; set to TRUE for past NULL -> 0 conversion

-------------------------- soilDB 1.4-2 (2014-12-23) ----------------------------
* new internally-used function .formatLandformString() for flattening NASIS/PedonPC "landform" records